modification page index terminer

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="agence la Panthère, web design, lyon, contacter">
-    <meta name="description" content="Pour contacter l'agence la Panthère, entreprise de web design à Lyon">
+    <meta name="description" content="Contacter l'agence la Panthère, entreprise de web design à Lyon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index,follow">
 
@@ -14,9 +13,9 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
     <title>Contact</title>
@@ -49,7 +48,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="Contact.html">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
