--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./s/bootstrap.js"></script>
+	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
@@ -231,22 +231,22 @@
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+								<a class="social" href="https://twitter.com/" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+								<a class="social" href="https://www.facebook.com/" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+								<a class="social" href="https://dribbble.com/" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 							</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="text-center">
-								<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+								<a class="social" href="https://www.instagram.com/" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 							</div>
 						</div>
 					</div>
