--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Lyon web design logo" height="40px" /></a>
+				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence la Panthère à Lyon, meilleure agence de web design" height="40px" /></div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -85,7 +85,7 @@
 						<label for="name">
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" type="name" required />
 					</div>
 					<div class="form-group">
 						<label for="email">
