--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<nav class="navbar row">
 				<div class="navbar-header">
 					
-					<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence la Panthère à Lyon, meilleure agence de web design" height="40px" /></a>
+					<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence la Panthère à Lyon, meilleure agence de web design" height="40px" /></div>
 					
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -71,9 +71,6 @@
 					<h1 class="text-center hero-bloc-text tc-white ">
 						Agence La Panthère
 					</h1>
-					<div class="text-center">
-						<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -143,7 +140,7 @@
 						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 					</h2>
 					<p class="text-center white">
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
 					</p>
 				</div>
 			</div>
