--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,7 @@
 					</li>
 					<li>
 					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
+					
 				</ul>
 			</div>
 		</nav>
@@ -109,11 +107,9 @@
 					</button>
 				</form>
 			</div>
-			<div class="col-sm-6">
-				<p>
-					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
-			</div>
+		</div>
+		<div class="adresse">
+			contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 		</div>
 	</div>
 </div>
@@ -135,7 +131,7 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a aria-label="Twitter" class="social" href="https://twitter.com/" ><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
