--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence la Panthère à Lyon, meilleure agence de web design" height="40px" /></div>
+				<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence la Panthère à Lyon, meilleure agence de web design"/></div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -78,12 +78,12 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1">
 					<div class="form-group">
 						<label for="name">
 							Nom
 						</label>
-						<input id="name" class="form-control" type="name" required />
+						<input id="name" class="form-control" type="text"/>
 					</div>
 					<div class="form-group">
 						<label for="email">
