--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<nav class="navbar row">
 				<div class="navbar-header">
 					
-					<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence la Panthère à Lyon, meilleure agence de web design" height="40px" /></div>
+					<div class="navbar-brand"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence la Panthère à Lyon, meilleure agence de web design"/></div>
 					
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -64,7 +64,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.png" class="center-block image-resize-mode" width="100px" alt="Agence La Panthère, agence web paris, création logo paris" />
+					<img src="img/logo.png" class="center-block image-resize-mode" alt="Agence La Panthère, agence web paris, création logo paris" />
 					<h1 class="text-center hero-bloc-text tc-white ">
 						Agence La Panthère
 					</h1>
@@ -119,7 +119,7 @@
 			</div>
 			<div class="row voffset-lg voffset">
 				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-					<h3>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h4>
+					<h3>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</h3>
 					<p>Maxime Guibard, PDG de À vos fourchettes</p>
 
 				</div>
