modif finition footer

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
+	
     <title>Contact</title>
 
     
@@ -125,9 +126,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<div class="text-center black">
 					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
+				</div>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
