--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>La Panthere</title>
+    <title>La Panthère</title>
 
     
 <!-- Analytics -->
@@ -219,9 +219,9 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
+					<h3 class="text-center black">
 						Agence La Panthère - Agence web basée à Lyon.<br>
-					</p>
+					</h3>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
 							<div class="text-center">
